style: make title  in on line
كلاس تحطه بحيث اذا النص الموجود في العنوان اكثر من سطر يقوم يخفي الزايد عشان شكل الكارد ما يخرب

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,11 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
+.oneLIineText {
+  overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 @layer base {
   * {
