--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,33 @@ html,body {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
+
+/* Customizing the scrollbar width */
+::-webkit-scrollbar {
+  width: 9px; /* For vertical scrollbars */
+  height: 9px; /* For horizontal scrollbars */
+}
+
+/* Styling the scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f4f4f4; /* Light grey background for the track */
+  border-radius: 10px; /* Rounded corners for the track */
+  border: 1px solid #dcdcdc; /* Optional border for the track */
+}
+
+/* Styling the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Darker grey for the thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+  border: 2px solid #f4f4f4; /* Matches the track background */
+}
+
+/* Change scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Darker grey when hovered */
+}
+
+/* Optional: Styling the scrollbar corners */
+::-webkit-scrollbar-corner {
+  background: #f4f4f4; /* Match the track background */
+}
