--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,13 @@ body {
   -moz-appearance: textfield;
   appearance: textfield;
 }
+.OfferSentence {
+  position: absolute;
+  z-index: 1;
+  font-size: 10px;
+  left: 0;
+  padding: 2px;
+  border-radius: 4px;
+  background: rgb(250 130 50 / 92%);
+  color: white;
+}
