--- a/app/globals.css
+++ b/app/globals.css
@@ -165,9 +165,8 @@ body {
   position: absolute;
   z-index: 1;
   font-size: 10px;
-  left: 0;
-  padding: 2px;
-  border-radius: 4px;
+  right: 0;
+  border-radius: 0 0 0px 4px;
   background: rgb(250 130 50 / 92%);
   color: white;
 }
