add about and privacy pages and edit the product details page and ...etc

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,8 @@ body {
 
 html,
 body {
-  font-family: var(--font-noto) !important;
+  font-family: var(--font-main) !important;
+    scroll-behavior: smooth;
 }
 
 .tajawal {
